# maestro-core

./: .env.default  .gitignore  CLAUDE.md  Makefile  NEWS.md  README.md  TASKS.md  check_maestro.sh  compose--document-extractor--cpu.yaml  compose--document-extractor--cu124.yaml  compose--frontend-telegram.yaml  compose.yaml  entrypoints.json.default  entrypoints.json.example  llm_config.json.default  llm_config.json.example  llm_config_for_test.json  llm_config_test_converted.json  maestro_client_cli.py  pyproject.toml
lib--mmar-carl/: .env.example  README.md  RELEASE.md  example.py  pyproject.toml  verify_installation.py
lib--mmar-carl/docs/: REASONING+.md  REASONING.md
lib--mmar-carl/examples/: __init__.py  basic_chain_example.py  conditions_example.py  dataset_evaluator_example.py  execution_modes_mock_example.py  execution_modes_pipeline_example.py  llm_council_example.py  metrics_example.py  openrouter_example.py  reflection_example.py  reflection_metrics_example.py  replan_budget_guard_example.py  replan_checkpoint_rollback_example.py  replan_deterministic_example.py  replan_llm_checker_example.py  replan_voting_example.py  runner.py  structured_output_example.py  tool_steps_example.py  utils.py
lib--mmar-carl/src/mmar_carl/: __init__.py  _optional_deps.py  chain.py  dataset_evaluator.py  executor.py  llm.py  logging_utils.py  metrics.py  models.py  replan.py  step_executors.py  tracing.py
lib--mmar-carl/src/mmar_carl/models/: __init__.py  base.py  config.py  context.py  dataset.py  enums.py  llm_client_base.py  prompts.py  replan.py  results.py  search.py  steps.py
lib--mmar-flame/: pyproject.toml
lib--mmar-llm/: .env.example  README.md  pyproject.toml
lib--mmar-mapi/: README.md  (+1 more)
service--chat-manager-examples/: AGENTS.md  Dockerfile  pyproject.toml  show_tracks.py
service--chat-manager-examples/src/: chat_manager_examples.py  config.py  config_server.py  main.py
service--chat-manager-examples/src/chat_manager_examples/: beta_slot_filling_track.py  chat_manager_examples.py  config.py  config_server.py  ioc.py  legacy.py  main.py
service--chat-manager-examples/src/chat_manager_examples/tracks/: chatbot.py  describer.py  document_describer.py  dummy.py  filling_user_profile.py  llm_config_wizard.py  recipes_summarizer.py  simple.py
service--chat-manager-examples/src/tracks/: chatbot.py  describer.py  dummy.py  entrypoints_wizard.py  recipes_summarizer.py
service--chat-manager-examples/tools/: visualize_ioc.py
service--document-extractor/: Dockerfile  README.md  pyproject.toml
service--document-extractor/src/document_extractor/: config.py  docling_document_extractor.py  document_extractor.py  legacy.py  main.py  main_single_run.py
service--frontend-telegram/: Dockerfile  README.md  pyproject.toml
service--frontend-telegram/src/frontend_telegram/: __init__.py  auth_manager.py  authentication.py  bots_framework.py  config.py  custom_context.py  dependencies.py  frontend_telegram.py  io_async.py  io_csv.py  io_fs.py  io_telegram.py  ioc.py  main.py  simple_cache.py  telethon_client.py  utils_telegram.py
service--gateway/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
service--gateway/alembic/: env.py
service--gateway/alembic/versions/: 001_initial_schema.py
service--gateway/src/: chat_storage.py  config.py  dependencies.py  fastapi_files.py  gateway.py  legacy.py  legacy_routes.py  main.py  routes.py  utils_funcs.py  validators.py
service--gateway/src/gateway/: chat_storage.py  chat_storage_sql.py  config.py  db.py  dependencies.py  fastapi_errors.py  fastapi_files.py  fastapi_logging_middleware.py  gateway.py  io_fs.py  ioc.py  legacy.py  legacy_routes.py  maestro_gateway.py  main.py  models.py  routes.py  validators.py
service--llm-accessor/: .gitattributes  Dockerfile  README.md  pyproject.toml
service--llm-accessor/src/: config.py  config_server.py  legacy_load_pydantic.py  llm_accessor.py  main.py
service--llm-hub/: Dockerfile  README-INTERNAL.md  README.md  llm-config.toml.example  pyproject.toml  setup.cfg  test.env.example
service--llm-hub-monitoring/: Dockerfile  README.md  config_template.py  pyproject.toml
service--llm-hub-monitoring/langfuse/: .env.example  Makefile  README.md  compose.yaml
service--llm-hub-monitoring/src/llm_hub_monitoring/: config.py  config_server.py  ioc.py  llm_hub_dummy.py  llm_hub_monitoring.py  main.py
service--llm-hub/src/llm_hub/: config.py  config_server.py  ioc.py  llm_hub.py  main.py  providers_anthropic.py  providers_base.py  providers_gigachat.py  providers_openai.py  utils_fastapi.py
service--llm-hub/tools/: llm_cli.py
service--moderators/: .gitattributes  Dockerfile  README.md  pyproject.toml
service--moderators/src/: config_server.py  main.py  moderators.py
service--moderators/src/data/: blacklist.json  childlist.json  greetlist.json  receiptlist.json  whitelist.json
service--moderators/src/moderators/: config.py  config_server.py  ioc.py  labels.py  main.py  moderators.py
service--moderators/src/moderators/data/: .gitattributes  blacklist.json  childlist.json  receiptlist.json  whitelist.json
service--question-detector/: .gitattributes  Dockerfile  README.md  pyproject.toml
service--question-detector/src/: config.py  main.py  question_detector.py
service--question-detector/src/models/: __init__.py  first_word.py  giga_embedding.py  llm_basic.py  question_mark.py
service--question-detector/src/question_detector/: config.py  config_server.py  ioc.py  main.py  question_detector.py
service--question-detector/src/question_detector/data/: classifier.jbl  first_word_list.csv
service--question-detector/src/question_detector/models/: first_word.py  giga_embedding.py  llm_basic.py
service--text-extractor/: Dockerfile  README.md  pyproject.toml
service--text-extractor/src/: config.py  config_server.py  converter_pdf_to_text.py  main.py  text_extractor.py
service--text-extractor/src/text_extractor/: config_server.py  converter_image_to_text.py  ioc.py  main.py  text_extractor.py
service--text-extractor/tools/: te_single_run.py
(+64 files in other folders)
