[project]
name = "chat-manager-examples"
version = "0.0.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "loguru~=0.7.2",
    # replace with `~=` in the future, after eliminating provide_all_and_memoize from legacy.py
    "dishka==1.7.2",

    "mmar-mapi~=1.4.3",
    "mmar-ptag~=1.0.13",
    "mmar-utils~=1.1.11",
    "mmar-llm~=2.0.6",
    "mmar-mimpl~=1.0.1",
]

[dependency-groups]
dev = [
    "tabulate",
    "pytest>=8.4.1",
]

[tool.uv.sources]
mypackage = { path = "src" }

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[tool.ruff]
line-length = 120

[tool.uv]
prerelease = "if-necessary"
