[project]
name = "chat-manager-examples"
version = "0.0.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "loguru~=0.7.2",
    # replace with `~=` in the future, after eliminating provide_all_and_memoize from legacy.py
    "dishka==1.7.2",

    "mmar-mapi~=1.4.3",
    "mmar-ptag~=1.0.18",
    "mmar-utils~=1.1.11",
    "mmar-llm~=2.0.6",
    "mmar-mimpl~=1.0.1",
]

[dependency-groups]
dev = [
    "tabulate",
    "pytest>=8.4.1",
]

[tool.uv.sources]
mypackage = { path = "src" }

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "C90",    # mccabe (complexity)
    "RUF",    # ruff-specific rules
    "TID",    # flake8-tidy-imports
    "ICN",    # flake8-import-conventions
    "PTH",    # flake8-use-pathlib
    "SIM",    # flake8-simplify
]
ignore = [
    "RUF001", # ambiguous-unicode-character-string
    "E402",   # module level import not at top of file (allow for now)
]

[tool.ruff.lint.per-file-ignores]
"src/chat_manager_examples/tracks/document_describer.py" = ["RUF001"]  # Russian text
"src/chat_manager_examples/tracks/recipes_summarizer.py" = ["RUF001"]  # Russian text
"src/chat_manager_examples/tracks/llm_config_wizard.py" = ["C901", "B005"]  # Legacy wizard, needs refactoring

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["chat_manager_examples"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "chat_manager_examples.tracks.llm_config_wizard"
disable_error_code = ["attr-defined", "return-value", "misc"]

[tool.uv]
prerelease = "if-necessary"
