[project]
name = "gateway"
version = "0.0.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "python-multipart~=0.0.19",
    "uvicorn[standard]==0.32.1",
    "python-magic==0.4.27",
    "pydantic~=2.12.5",
    "loguru~=0.7.2",
    "pydantic-settings~=2.12.0",
    "starlette~=0.41.3",
    "dishka~=1.5.0",
    "openai~=1.61.0",
    "mmar-ptag~=1.1.2",
    "mmar-mapi~=1.6.0",
    "mmar-utils~=1.1.18",
    "mmar-mcli~=1.3.1",
    "mmar-llm~=2.0.20",
    "sqlalchemy[asyncio]~=2.0.48",
    "asyncpg~=0.31.0",
    "alembic~=1.18.4",
]

[tool.uv.sources]
mypackage = { path = "src" }

[tool.pytest.ini_options]
pythonpath = [ "src" ]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
       "ANN", # type annotations
       "I", # imports
       "F", # undefined names
]
ignore = [
       "ANN204", # ignoring `__init__(self, ...) -> None`
       "ANN401", # ignoring `: typing.Any`
]
exclude = ["tests/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # Ignore all type annotation rules in tests


[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
no_implicit_optional = true
strict_optional = true
exclude = ["test.py"]
plugins = ["pydantic.mypy"]
mypy_path = "src/stubs"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[dependency-groups]
dev = [
    "pytest~=8.4.2",
    "pytest-asyncio~=1.1.0",
    "ruff~=0.12.12",
    "testcontainers[postgres]~=4.9.0",
]
