[project]
name = "llm-hub-monitoring"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "loguru~=0.7.2",
    "dishka~=1.7.2",

    "mmar-mapi~=1.4.5",
    "mmar-ptag~=1.0.18",
    "mmar-utils~=1.1.11",
    "mmar-llm~=2.0.6",
    "mmar-mimpl~=1.0.1",

    "langfuse~=3.0.0",
    "tiktoken~=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
mypackage = { path = "src" }

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[pytest]
python_files = [ "test_*.py" ]
testpaths = [ "tests" ]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "C90",    # mccabe (complexity)
    "RUF",    # ruff-specific rules
    "TID",    # flake8-tidy-imports
    "ICN",    # flake8-import-conventions
    "PTH",    # flake8-use-pathlib
    "SIM",    # flake8-simplify
]
ignore = [
    "RUF001", # ambiguous-unicode-character-string
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["llm_hub_monitoring"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" 

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
