[project]
name = "llm-hub"
version = "0.1.0"
description = "Hub to LLM instances"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",

    "mmar-llm~=2.0.14",
    "mmar-mapi~=1.4.5",
    "mmar-ptag~=1.0.18",
    "mmar-utils~=1.1.11",
    "mmar-mimpl~=1.0.1",
]

[tool.uv.sources]
mypackage = { path = "src" }

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

