[project]
name = "moderator"
version = "0.0.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic~=2.11.7",
    "pydantic-settings~=2.10.1",
    "loguru~=0.7.2",
    "mmar-ptag~=1.0.12",
    "mmar-utils~=1.1.2",
    "mmar-flame>=1.0.0",
    "mmar-mapi~=1.2.5",
]

[project.optional-dependencies]
dev = [
    "scikit-learn>=1.7.0",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "scikit-learn>=1.7.2",
]
