[project]
name = "moderator"
version = "0.0.1"
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "loguru~=0.7.2",
    "dishka~=1.8.0",
    "mmar-ptag~=1.1.2",
    "mmar-utils~=1.1.18",
    "mmar-flame~=1.0.1",
    "mmar-mapi~=1.6.0",
    "mmar-mimpl~=1.1.4",
]

[project.optional-dependencies]
dev = [
    "scikit-learn>=1.7.0",
]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "scikit-learn>=1.7.2",
]
