[project]
name = "question-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "joblib==1.5.0",
    "pydantic~=2.11.7",
    "pydantic-settings~=2.10.1",
    "pymorphy3>=2.0.3",
    "scikit-learn==1.6.1",

    "mmar-mapi~=1.2.5",
    "mmar-ptag~=1.0.13",
    "mmar-utils~=1.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120
