[project]
name = "question-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "joblib==1.5.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "pymorphy3>=2.0.3",
    "scikit-learn==1.6.1",

    "mmar-mapi~=1.4.2",
    "mmar-ptag~=1.0.18",
    "mmar-utils~=1.1.11",
    "mmar-mimpl~=1.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
mypackage = { path = "src" }

[tool.pytest.ini_options]
pythonpath = [ "src" ]
