[project]
name = "text-extractor"
version = "0.0.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "pydantic~=2.11.7",
    "pydantic-settings~=2.10.1",
    "loguru~=0.7.2",

    "mmar-mapi~=1.2.5",
    "mmar-ptag~=1.0.13",
    "mmar-utils~=1.1.2",

    "pytesseract==0.3.13",
    "pypdf==4.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]


[tool.ruff]
line-length = 120